fixed auto scrollbar, cant scroll over nav, added extra breakpoints

--- a/src/pages/appWindow/_AppWindow.scss
+++ b/src/pages/appWindow/_AppWindow.scss
@@ -22,7 +22,7 @@
     }
   }
   .app-content {
-    overflow-y: scroll;
+    overflow-y: auto;
     // scrollbar-width: none;
   }
   .app-footer {
@@ -61,5 +61,20 @@
         margin-right: 1rem;
       }
     }
+  }
+}
+
+@include mqMin($desktopWideBreakpoint) {
+  .app-window:not(#about):not(#contact) {
+    height: 800px;
+    width: 900px;
+    top: 14rem;
+  }
+}
+
+@include mqMin($desktopExtraWideBreakpoint) {
+  .app-window:not(#about):not(#contact) {
+    height: 800px;
+    width: 1100px;
   }
 }
